methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:40: error: ':' expected but ')' found.
def isFacingTrail(c):Boolean = {
                   ^SlugSnail:57: error: identifier expected but '}' found.
}
^